Turned on -Wextra, -Wcast-align and -pedantic

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
+CXXFLAGS =	-O2 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0
 
 OBJS =		miNES.o mem/mem.o cpu/cpu.o
 
