Added SDL includes, library and init code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,14 @@
 VERSION  = $(shell git describe --always --dirty)
 
-CXXFLAGS =	-O1 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 -std=c++11 -DGIT_REV=\"$(VERSION)\"
+SDL_CFLAGS := $(shell sdl2-config --cflags)
+
+SDL_LDFLAGS := $(shell sdl2-config --libs)
+
+CXXFLAGS =	-O1 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 -std=c++11 -DGIT_REV=\"$(VERSION)\" $(SDL_CFLAGS)
 
 OBJS =		miNES.o mem/mem.o cpu/cpu.o
 
-LIBS =
+LIBS = $(SDL_LDFLAGS)
 
 TARGET =	miNES
 
