Added SDL includes, library and init code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,14 @@
-CXXFLAGS =	-O2 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0
+CXX = clang
+
+SDL_CFLAGS := $(shell sdl2-config --cflags)
+
+SDL_LDFLAGS := $(shell sdl2-config --libs)
+
+CXXFLAGS =	-O2 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 $(SDL_CFLAGS)
 
 OBJS =		miNES.o mem/mem.o cpu/cpu.o
 
-LIBS =
+LIBS = $(SDL_LDFLAGS)
 
 TARGET =	miNES
 
