--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-CXXFLAGS =	-O2 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0
+CXXFLAGS =	-O0 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 -std=c++0x
+
 
 OBJS =		miNES.o mem/mem.o cpu/cpu.o
 
