Enabled c++11, added help and usage
Made replaced some embeded objects with unique_ptr.
Git version info is now embeded into the binary.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,6 @@
-CXXFLAGS =	-O2 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0
+VERSION  = $(shell git describe --always --dirty)
+
+CXXFLAGS =	-O1 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 -std=c++11 -DGIT_REV=\"$(VERSION)\"
 
 OBJS =		miNES.o mem/mem.o cpu/cpu.o
 
