Added ppu object and ticking

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ SDL_LDFLAGS := $(shell sdl2-config --libs)
 
 CXXFLAGS =	-O1 -g -Wall -Wextra -Wcast-align -pedantic -fmessage-length=0 -std=c++11 -DGIT_REV=\"$(VERSION)\" $(SDL_CFLAGS)
 
-OBJS =		miNES.o mem/mem.o cpu/cpu.o
+OBJS =		miNES.o mem/mem.o cpu/cpu.o ppu/ppu.o
 
 LIBS = $(SDL_LDFLAGS)
 
